--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ header nav {
     padding: 10px;
     box-shadow: inset 0 2px 4px rgba(0,0,0,0.5);
 }
-.chat-input, button {
+.chat-input, button, .settings-section input[type="text"], .settings-section input[type="password"], .settings-section input[type="email"], .settings-section select, .settings-section input[type="range"] {
     width: 100%;
     padding: 10px;
     margin-top: 10px;
@@ -268,6 +268,9 @@ button:hover {
 .input-error {
     outline: 2px solid red;
 }
+.input-success {
+    outline: 2px solid green;
+}
 .message-error {
     color: red;
 }
@@ -316,20 +319,15 @@ button:hover {
     margin-bottom: 20px;
 }
 .settings-section h3 {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 .settings-section label {
     display: block;
     margin-bottom: 5px;
 }
 .settings-section input[type="text"], .settings-section input[type="password"], .settings-section input[type="email"], .settings-section select, .settings-section input[type="range"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    background: #424242;
-    color: #fff;
-    border: 1px solid #555;
-    border-radius: 5px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 .settings-section button {
     width: 100%;
@@ -340,6 +338,7 @@ button:hover {
     border-radius: 5px;
     cursor: pointer;
     margin-top: 5px;
+    margin-bottom: 10px;
 }
 .settings-section button:hover {
     background-color: #0d47a1;
