--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body, html {
     background: #121212;
     color: #e0e0e0;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 header {
     background: #333;
@@ -13,6 +15,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 2;
 }
 header nav {
     flex-grow: 1;
@@ -63,7 +66,8 @@ header nav {
 }
 .dashboard {
     display: flex;
-    height: calc(100% - 50px);
+    flex: 1;
+    flex-direction: column;
 }
 .sidebar {
     background: #424242;
@@ -71,10 +75,16 @@ header nav {
     width: 250px;
     overflow-y: auto;
 }
+#main-app{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+}
 .main-content {
+    display: flex;
     flex-grow: 1;
+    justify-content: center;
     padding: 20px;
-    overflow-y: auto;
 }
 .module {
     background: #333333;
@@ -82,15 +92,19 @@ header nav {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+    width: 50%;
+    display: flex;
+    flex-direction: column;
 }
 .chat-history {
-    height: 300px;
+    flex: 1;
     overflow-y: auto;
     margin-bottom: 10px;
     background: #424242;
     border-radius: 10px;
     padding: 10px;
     box-shadow: inset 0 2px 4px rgba(0,0,0,0.5);
+    box-sizing: border-box;
 }
 .chat-input, button, .settings-section input[type="text"], .settings-section input[type="password"], .settings-section input[type="email"], .settings-section select, .settings-section input[type="range"], .settings-section textarea, .tab-content input, .tab-content textarea {
     width: 100%;
@@ -114,6 +128,7 @@ button:hover {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    box-sizing: border-box;
 }
 .send-button:hover {
     background-color: #0d47a1;
@@ -143,6 +158,7 @@ button:hover {
     background: #424242;
     padding: 20px;
     border-radius: 0 5px 5px 5px;
+    flex: 1;
 }
 .tab {
     display: none;
@@ -300,10 +316,6 @@ button:hover {
     color: #333;
 }
 .settings-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     width: 30%;
     background: #333333;
     padding: 20px;
