--- a/style.css
+++ b/style.css
@@ -408,8 +408,48 @@ button:hover {
 }
 
 .weather-module {
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     padding: 20px;
     border-radius: 10px;
+}
+
+.now-playing-info {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; /* Center content vertically */
+    text-align: center; /* Center text horizontally */
+}
+
+.now-playing-info img {
+    width: 100px;
+    height: 100px;
+    border-radius: 10%;
+    margin-bottom: 10px; /* Add some space between the image and text */
+}
+
+.track-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.track-info {
+    display: flex;
+    justify-content: center;
+    margin: 5px 0;
+}
+
+.track-info strong {
+    margin-right: 5px; /* Space between label and text */
+}
+
+.small-header {
+    font-size: 1.2em; /* Adjust the size as needed */
 }
