--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ header nav {
 }
 button:hover {
     background-color: #1e88e5;
+    cursor: pointer;
 }
 .send-button {
     width: 100%;
@@ -186,6 +187,7 @@ button:hover {
 }
 .send-button:hover {
     background-color: #0d47a1;
+    cursor: pointer;
 }
 .tabbed-interface {
     display: flex;
@@ -237,6 +239,43 @@ button:hover {
     padding: 10px;
     text-align: left;
     border-bottom: 1px solid #424242;
+}
+tr:nth-child(even) td {
+    background-color: #3a3a3a;
+}
+.tasks-table tr:hover td, .reminders-table tr:hover td {
+    background-color: #2c2c2c;
+    cursor: pointer;
+}
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto;
+    padding-top: 60px; 
+}
+.modal-content {
+    background-color: #424242;
+    margin: 5% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%; 
+}
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 .email-snippet {
     position: relative;
@@ -313,6 +352,7 @@ button:hover {
 }
 #login-signup-screen button:hover {
     background-color: #0d47a1;
+    cursor: pointer;
 }
 #login-signup-screen .remember-me {
     display: flex;
@@ -413,6 +453,7 @@ button:hover {
 }
 .settings-section button:hover {
     background-color: #0d47a1;
+    cursor: pointer;
 }
 .now-playing-info {
     background-color: #333;
